--- a/pgen/build.gradle
+++ b/pgen/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    api 'com.github.samtools:htsjdk:2.24.1'
+
     // Use TestNG framework, also requires calling test.useTestNG() below
     testImplementation 'org.testng:testng:7.4.0'
 }
