failed attempt to have coffeecatch intercept assertion failures

--- a/pgen/build.gradle
+++ b/pgen/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'dev.nokee.jni-library'
     id 'dev.nokee.cpp-language'
+    id 'dev.nokee.c-language'
 }
 
 repositories {
