--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
-# Ignore Gradle build output directory
-build
+# Ignore Gradle build output directory, except for the (mac dylib component)
+/build/
+/pgen/build/
+/pgen-lib/build/
+/org/
 
-#Ignore .idea directory
+#Ignore .idea and .vscode directories
 .idea
+.vscode
 
 #OSX junk
 *.DS_Store
+
+#Java binary stuff
+pgen/bin
+
+#pgen-lib CMake stuff
+pgen-lib/cmake-build-debug
+pgen-lib/cmake-build-release
 
