Add pgen-lib CMakeLists.txt.

--- a/pgen-lib/build.gradle
+++ b/pgen-lib/build.gradle
@@ -13,7 +13,12 @@ library {
     targetLinkages = [linkages.static]
  }
 
- dependencies {
+ buildTypes {
+    debug
+    release
+}
+
+dependencies {
     // assumes boost 1.80.0 is installed in /usr/local/boost for C++ unit tests
  }
 
