--- a/pgen-lib/build.gradle
+++ b/pgen-lib/build.gradle
@@ -1,3 +1,6 @@
+
+//TODO: add C98/C++11 compile flags to establish the language version(s)
+
 plugins {
 	id 'dev.nokee.cpp-library'
 	id 'cpp-unit-test'
@@ -28,6 +31,8 @@ tasks.withType(CppCompile).configureEach {
         "${project(':pgen-lib').projectDir}/src/main/public",
         "${project(':pgen-lib').projectDir}/src/main/headers"]
      }
+    //establish C++11 as the language version/dialects(s)
+    compilerArgs.add "-std=c++11"
 }
 
 unitTest {
