Get verbos data from all output streams when running tests.

--- a/pgen/build.gradle
+++ b/pgen/build.gradle
@@ -49,4 +49,7 @@ tasks.withType(CppCompile).configureEach {
 tasks.named('test') {
     // Use TestNG for unit tests.
     useTestNG()
+    testLogging {
+        showStandardStreams = true
+    }
 }
