--- a/pgen/build.gradle
+++ b/pgen/build.gradle
@@ -186,7 +186,7 @@ publishing {
     repositories {
         maven {
             name = "SonaType"
-            url =  "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            url =  "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
             credentials {
                 username = project.findProperty("sonatypeUsername")
                 password = project.findProperty("sonatypePassword")
